--- a/src/styles/capabilities.module.css
+++ b/src/styles/capabilities.module.css
@@ -3,7 +3,7 @@
   padding: 6rem 2rem;
   color: #d0d0d0;
   text-align: center;
-  margin-top: -5rem;
+  margin-top: -2rem;
 }
 
 .grid {
