--- a/src/styles/docs.module.css
+++ b/src/styles/docs.module.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 
 .docsWrapper {
-  font-family: 'Merriweather', serif;
+  /* font-family: 'Merriweather', serif;  might change it? To april? */
+  font-family:Arial, Helvetica, sans-serif;
   line-height: 1.75;
   color: white;
   padding: 4rem 2rem;
